refactor(api,web,docs): watched feature
