# api/internal/router/routes.go
@@ -46,19 +46,19 @@ func New(ctx *context.ServerContext) http.Handler {
 	router.HandlerFunc(http.MethodPost, "/v1/watchlist/tv/:id", middleware.RequireAuthenticatedUser(h.WatchlistHandler.AddTvShowToWatchlistHandler))
 	router.HandlerFunc(http.MethodDelete, "/v1/watchlist/tv/:id", middleware.RequireAuthenticatedUser(h.WatchlistHandler.DeleteTvShowFromWatchlistHandler))
 
-	// router.HandlerFunc(http.MethodGet, "/v1/watched/", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetWatchedHandler))
-	// router.HandlerFunc(http.MethodGet, "/v1/watched/movies/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetMoviesWatchedHandler))
-	// router.HandlerFunc(http.MethodPost, "/v1/watched/movies/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddMovieToWatchedHandler))
-	// router.HandlerFunc(http.MethodDelete, "/v1/watched/movies/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteMovieFromWatchedHandler))
-	// router.HandlerFunc(http.MethodGet, "/v1/watched/tv/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetTvShowsWatchedHandler))
-	// router.HandlerFunc(http.MethodPost, "/v1/watched/tv/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddTvShowToWatchedHandler))
-	// router.HandlerFunc(http.MethodDelete, "/v1/watched/tv/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteTvShowFromWatchedHandler))
-	// router.HandlerFunc(http.MethodGet, "/v1/watched/tv/:id/seasons/:season_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetTvSeasonWatchedHandler))
-	// router.HandlerFunc(http.MethodPost, "/v1/watched/tv/:id/seasons/:season_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddTvSeasonToWatchedHandler))
-	// router.HandlerFunc(http.MethodDelete, "/v1/watched/tv/:id/seasons/:season_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteTvSeasonFromWatchedHandler))
-	// router.HandlerFunc(http.MethodGet, "/v1/watched/tv/:id/seasons/:season_number/episodes/:episode_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetTvEpisodeWatchedHandler))
-	// router.HandlerFunc(http.MethodPost, "/v1/watched/tv/:id/seasons/:season_number/episodes/:episode_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddTvEpisodeToWatchedHandler))
-	// router.HandlerFunc(http.MethodDelete, "/v1/watched/tv/:id/seasons/:season_number/episodes/:episode_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteTvEpisodeFromWatchedHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/watched", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetWatchedHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/watched/movies/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetMovieWatchedHandler))
+	router.HandlerFunc(http.MethodPost, "/v1/watched/movies/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddMovieToWatchedHandler))
+	router.HandlerFunc(http.MethodDelete, "/v1/watched/movies/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteMovieFromWatchedHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/watched/tv/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetTvWatchedHandler))
+	router.HandlerFunc(http.MethodPost, "/v1/watched/tv/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddTvToWatchedHandler))
+	router.HandlerFunc(http.MethodDelete, "/v1/watched/tv/:id", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteTvFromWatchedHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/watched/tv/:id/seasons/:season_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetTvSeasonWatchedHandler))
+	router.HandlerFunc(http.MethodPost, "/v1/watched/tv/:id/seasons/:season_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddTvSeasonToWatchedHandler))
+	router.HandlerFunc(http.MethodDelete, "/v1/watched/tv/:id/seasons/:season_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteTvSeasonFromWatchedHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/watched/tv/:id/seasons/:season_number/episodes/:episode_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.GetTvEpisodeWatchedHandler))
+	router.HandlerFunc(http.MethodPost, "/v1/watched/tv/:id/seasons/:season_number/episodes/:episode_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.AddTvEpisodeToWatchedHandler))
+	router.HandlerFunc(http.MethodDelete, "/v1/watched/tv/:id/seasons/:season_number/episodes/:episode_number", middleware.RequireAuthenticatedUser(h.WatchedHandler.DeleteTvEpisodeFromWatchedHandler))
 
 	return middleware.RecoverPanic(middleware.EnableCORS(ctx.Config, middleware.Authenticate(&ctx.Models, router)))
 }
