# docs/openapi.yml
@@ -1080,7 +1080,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Watched"
+                $ref: "#/components/schemas/WatchedResponse"
         "401":
           description: Unauthorized
           content:
@@ -1254,7 +1254,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/WatchedTv"
+                $ref: "#/components/schemas/WatchedTvResponse"
         "400":
           description: Bad request
           content:
@@ -1393,7 +1393,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/WatchedTvSeason"
+                $ref: "#/components/schemas/WatchedTvSeasonResponse"
         "400":
           description: Bad request
           content:
@@ -2597,6 +2597,15 @@ components:
           examples:
             - true
 
+    WatchedResponse:
+      type: object
+      required:
+        - watched
+      properties:
+        watched:
+          type: object
+          $ref: "#/components/schemas/Watched"
+
     Watched:
       type: object
       required:
@@ -2606,11 +2615,11 @@ components:
         movies:
           type: array
           items:
-            $ref: "#/components/schemas/SearchMoviesResponse"
+            $ref: "#/components/schemas/SearchMovie"
         tv:
           type: array
           items:
-            $ref: "#/components/schemas/SearchTVResponse"
+            $ref: "#/components/schemas/SearchTv"
 
     InWatched:
       type: object
@@ -2622,27 +2631,50 @@ components:
           examples:
             - true
 
+    WatchedTvResponse:
+      type: object
+      required:
+        - watched_tv
+      properties:
+        watched_tv:
+          type: object
+          $ref: "#/components/schemas/WatchedTv"
+
     WatchedTv:
-      type: array
-      items:
-        type: object
-        required:
-          - id
-          - status
-          - seasons
-        properties:
-          id:
-            type: integer
-            format: int64
-            examples:
-              - 1399
-          status:
-            type: string
-            enum: ["watched", "in_progress", "not_watched"]
-          seasons:
-            type: array
-            items:
-              $ref: "#/components/schemas/WatchedTvSeason"
+      type: object
+      required:
+        - id
+        - status
+        - seasons
+        - progress
+      properties:
+        id:
+          type: integer
+          format: int64
+          examples:
+            - 1399
+        status:
+          type: string
+          enum: ["watched", "in_progress", "not_watched"]
+        progress:
+          type: number
+          format: double
+          examples:
+            - 100
+            - 33.33
+        seasons:
+          type: array
+          items:
+            $ref: "#/components/schemas/WatchedTvSeason"
+
+    WatchedTvSeasonResponse:
+      type: object
+      required:
+        - watched_season
+      properties:
+        watched_season:
+          type: object
+          $ref: "#/components/schemas/WatchedTvSeason"
 
     WatchedTvSeason:
       type: object
@@ -2661,19 +2693,11 @@ components:
         episodes:
           type: array
           items:
-            type: object
-            required:
-              - episode_number
-              - in_watched
-            properties:
-              episode_number:
-                type: integer
-                examples:
-                  - 1
-              in_watched:
-                type: boolean
-                examples:
-                  - true
+            type: integer
+            examples:
+              - 1
+              - 2
+              - 3
 
     Message:
       type: object
